testsuite/tests/typecheck/should_fail/CanonicalTypesError01.hs
{-# LANGUAGE ConstraintKinds  #-}
{-# LANGUAGE FlexibleContexts #-}

module CanonicalTypesError01 where

type {-# CANONICAL #-} Foo a = Show (a -> ())

hello :: Foo Int => (Int -> ()) -> String
hello = show

bar :: String
bar = hello $ const ()

